# civ

./: .eslintrc.cjs  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOs.txt  index.html  package-lock.json  package.json  playwright.config.ts  settings.local.json
.claude/: settings.local.json
.claude/commands/: merge-worktree.md  rust-bevy-bundle.md  rust-bevy-component.md  rust-bevy-plugin.md  rust-bevy-query.md  rust-bevy-system.md  workstream-add.md  workstream-blocked.md  workstream-claim.md  workstream-export.md  workstream-import.md  workstream-instances.md  workstream-ready.md  workstream-release.md  workstream-status.md  workstream-sync.md  workstream-unblocks.md  workstream-update.md
.claude/hooks/: log-prompt.sh  update-heartbeat.sh  update-summary.sh  validate-swarm-json.sh  validate-workstream-state.sh  verify-worktree-registration.sh
.claude/skills/: create-skill.md
.githooks/: pre-commit
.swarm/: instances.json  workstreams.json
.swarm/checkpoints/: 2026-01-18-cli-integration-phase1.md  2026-01-18-hover-highlight-bug-fix-phase-1.md  2026-01-18-hover-highlight-bug-fix-phase-2.md  2026-01-18-hover-highlight-bug-fix-phase-3.md  2026-01-18-hover-highlight-bug-fix-phase-4.md  2026-01-18-implement-worktree-enhancements-phase-1.md  2026-01-18-implement-worktree-enhancements-phase-2.md  2026-01-18-implement-worktree-enhancements-phase-3.md  2026-01-18-implement-worktree-enhancements-phase-4.md  2026-01-18-implement-worktree-flow-phase-1.md  (+20 more)
scripts/: setup.sh
src/: lib.rs  main.rs  main.ts  style.css
src/ai/: index.ts  (+1 more)
tests/: map_generation.rs
(+329 files in other folders)
