[package]
name = "openciv"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
# Game Engine - Bevy 0.14 (stable)
bevy = { version = "0.14", features = ["dynamic_linking"] }

# Hex grid math - hexx 0.17 (without bevy_reflect to avoid version conflicts)
hexx = "0.17"

# Tilemap rendering (commented out until needed)
# bevy_ecs_tilemap = "0.14"

# UI (commented out until needed)
# bevy_egui = "0.28"

# Procedural generation
noise = "0.9"
rand = { version = "0.8", features = ["small_rng"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# For floating-point comparison in tests
approx = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
